# hektor_hmi

./: CMakeLists.txt  README.md  package.xml
gui/: gui.html
include/: VivHmi.hpp
scripts/: start_server.py
src/: VivHmi.cpp  main.cpp
webpage/: index.html  kinova_status.html  motor_drive_status.html  spraying.html  tank_status.html  uav_status.html  viv_status.html
webpage/scripts/: battery_visualize.js  battery_visualize_viv.js  connect_ros.js  connect_ros_uav.js  tanks_visualize.js  tanks_visualize_viv.js  vel_visualize.js
webpage/scripts/uav/: battery_visualize_uav.js  status_writing_uav.js
webpage/scripts/viv/: battery_visualize_viv.js  connect_ros_viv.js  drives_visualize_viv.js  kinova_status_writing.js  status_writing_viv.js  tanks_visualize_viv.js  vel_visualize_viv.js
webpage/styles/: main.css
